--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,7 +23,14 @@
             "program": "${workspaceFolder}/node_modules/.bin/jest",
             "windows": {
                 "program": "${workspaceFolder}/node_modules/jest/bin/jest"
-            }
+            },
+            "jest.autoRun": {
+                "watch": false,
+                "onStartup": [
+                    "all-tests"
+                ],
+                "onSave": "test-file",
+            },
         }
     ]
 }
