--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "my-mini-vue",
   "version": "1.0.0",
   "description": "vue mini版",
-  "main": "index.js",
+  "main": "lib/guide-mini-vue.cjs.js",
+  "module": "lib/guide-mini-vue.esm.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "rollup -c rollup.config.mjs"
   },
   "keywords": [],
   "author": "duxiaohao",
@@ -18,9 +20,11 @@
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@rollup/plugin-typescript": "^11.1.1",
     "@types/jest": "^29.5.2",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
+    "tslib": "^2.5.3",
     "vitest": "^0.32.1"
   }
 }
