--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/guide-mini-vue.cjs.js",
   "module": "lib/guide-mini-vue.esm.js",
   "scripts": {
-    "test": "jest",
+    "test": "vitest",
     "build": "rollup -c rollup.config.mjs"
   },
   "keywords": [],
@@ -21,10 +21,18 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@rollup/plugin-typescript": "^11.1.1",
-    "@types/jest": "^29.5.2",
-    "babel-jest": "^29.5.0",
-    "jest": "^29.5.0",
     "tslib": "^2.5.3",
     "vitest": "^0.32.1"
-  }
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xiaohaodu/my-mini-vue.git"
+  },
+  "bugs": {
+    "url": "https://github.com/xiaohaodu/my-mini-vue/issues"
+  },
+  "homepage": "https://github.com/xiaohaodu/my-mini-vue#readme"
 }
